[ui] Fixes for button text and LayoutTable alignment

--- a/ajenti/plugins/core/files/tables.css
+++ b/ajenti/plugins/core/files/tables.css
@@ -48,6 +48,3 @@
     opacity: 1.0;
 }
 
-.ui-el-layouttable-cell {
-    vertical-align: middle;
-}
